public class Balance {

    public static int MAX_HAND_SIZE = 5;
    public static int MAX_ACTION_POINTS = 3;
    public static int MAX_PLAYER_HEALTH = 100;
    public static int BOSS_LAYER = 5;
    public static int ELEMENT_DAMAGE_MODIFIER = 2;

}
