@startuml
'https://plantuml.com/class-diagram

class Main
class GameController {
Player player
Frame frame
ArrayList<Enemy> randomEnemies
ArrayList Boss
int layer
startGame()
generateEnemies()
generateRewardCards
}

class Combat {
int combatRound
Player player
Enemy activeEnemy

startCombat()
megaLogic()
modifier()
}
abstract class CombatEntity {
int health
int maxHealth
int actionPoints
int maxActionPoints
String name
String type
addHealth()
removeHealth()
abstract takeTurn()
}
class Player {
CombatCard usedCard
ArrayList<CombatCard> PlayerCards
ArrayList<CombatCard> PlayerHand
takeTurn()
drawHand()
shuffleDeck()
removeCardFromHand()
setUsedCard()
generatePlayerCards()
}
class Enemy{
takeTurn()
}
class Boss
class CombatCard {
getElement()
getCardName()
getCardText()
}
class Balance

class Frame
class CardLabel
class CombatPanel
class PlayerHandPanel

Main - GameController : Starts
GameController "1" *-- "1"Combat
Combat "1" *-- "1" Player
Combat "1" *-- "1" Enemy
Combat *-- Boss
CombatEntity <|-- Player
CombatEntity <|-- Enemy
CombatEntity <|-- Boss
Player "1" *-- "many" CombatCard : contains
Enemy "1" *-- "3-5" CombatCard : contains
Boss "1" *-- "3-5" CombatCard : contains


GameController - Frame : Starts
Frame *-- CombatPanel
Frame *-- PlayerHandPanel
PlayerHandPanel "1" *-- "5" CardLabel


@enduml